--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,3 +31,12 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          
+  trigger_helm_install:
+    name: Helm release
+    runs-on: ubuntu-latest
+    needs: push_to_registry   
+    steps:
+      - name: Trigger helm install
+        run: |
+          curl -XPOST -u "taneskia:${{ secrets.PAT_TOKEN }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/taneskia/conduit_cicd/dispatches --data '{"event_type": "frontend_updated"}'
